# noise-software2

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml
apps/noise-api/: Cargo.toml
apps/noise-api/src/: lib.rs  main.rs  state.rs
apps/noise-api/src/middleware/: auth.rs  mod.rs  rate_limit.rs
apps/noise-api/src/routes/: auth.rs  calculate.rs  export.rs  mod.rs  objects.rs  projects.rs  render.rs  scenarios.rs  stats.rs  users.rs  ws.rs
apps/noise-api/tests/: api_integration.rs
apps/noise-cli/: Cargo.toml
apps/noise-cli/src/: main.rs
apps/noise-cli/src/commands/: auth.rs  calc.rs  export.rs  import.rs  info.rs  mod.rs  object.rs  project.rs  server.rs
apps/noise-desktop/: Makefile  index.html
apps/noise-desktop/frontend/: index.html
apps/noise-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/noise-desktop/src-tauri/capabilities/: default.json
apps/noise-desktop/src-tauri/src/: lib.rs  main.rs
crates/noise-auth/: Cargo.toml
crates/noise-auth/src/: jwt.rs  lib.rs  password.rs  service.rs  user.rs
crates/noise-core/: Cargo.toml
crates/noise-core/benches/: grid_calc_bench.rs  propagation_bench.rs  ray_tracer_bench.rs
crates/noise-core/src/: lib.rs  parallel.rs  simd.rs  spatial.rs
crates/noise-core/src/engine/: angle_scan.rs  diffraction.rs  ground_effect.rs  mod.rs  propagation.rs  ray_tracer.rs
crates/noise-core/src/gpu/: compute.rs  mod.rs
crates/noise-core/src/grid/: calculator.rs  facade.rs  horizontal.rs  mod.rs  multi_period.rs  vertical.rs
crates/noise-core/src/metrics/: custom.rs  exposure.rs  mod.rs  standard.rs
crates/noise-core/src/obstacles/: barrier.rs  building.rs  mod.rs  terrain.rs
crates/noise-core/src/sources/: cnossos_rail.rs  cnossos_road.rs  line.rs  mod.rs  point.rs  railway.rs  road.rs  superposition.rs
crates/noise-core/tests/: integration_acoustic.rs
crates/noise-data/: Cargo.toml
crates/noise-data/src/: lib.rs  scenario.rs  transform.rs
crates/noise-data/src/db/: mod.rs
crates/noise-data/src/db/migrations/: 001_initial.sql  002_indexes.sql
crates/noise-data/src/entities/: mod.rs  receiver.rs
crates/noise-data/src/entities/obstacles/: barrier.rs  bridge.rs  building.rs  cylinder.rs  ground_absorption.rs  land_use_zone.rs  mod.rs  reflector3d.rs  tree_belt.rs
crates/noise-data/src/entities/sources/: line.rs  mod.rs  point.rs  railway.rs  road.rs
crates/noise-data/src/repository/: calculations.rs  mod.rs  projects.rs  scene_objects.rs  users.rs
crates/noise-export/: Cargo.toml
crates/noise-export/src/: asc.rs  csv_fmt.rs  geojson.rs  lib.rs
crates/noise-io/: Cargo.toml
crates/noise-io/src/: lib.rs
crates/noise-io/src/export/: mod.rs  noise_map.rs  report.rs
crates/noise-io/src/import/: ascii.rs  dxf.rs  geojson.rs  mod.rs  shapefile.rs  types.rs  xml.rs
crates/noise-mcp/: Cargo.toml
crates/noise-mcp/src/: lib.rs  schema.rs  server.rs
crates/noise-mcp/src/tools/: calculate.rs  manage.rs  mod.rs  query.rs
crates/noise-render/: Cargo.toml
crates/noise-render/src/: camera.rs  color.rs  contour.rs  lib.rs
crates/noise-render/src/export/: mod.rs  png.rs  svg.rs
crates/noise-render/src/gpu/: context.rs  mod.rs  pipeline.rs  uniforms.rs
crates/noise-render/src/map2d/: mod.rs
crates/noise-render/src/mesh/: heatmap.rs  mod.rs  terrain.rs
crates/noise-render/src/scene3d/: mod.rs
crates/noise-render/src/shaders/: heatmap.wgsl  mod.rs  terrain.wgsl
crates/noise-wasm/: Cargo.toml
crates/noise-wasm/src/: calc.rs  lib.rs  metrics.rs  stats.rs
scripts/: setup-mac.sh
