[workspace]
resolver = "2"
members = [
    "crates/noise-core",
    "crates/noise-data",
    "crates/noise-render",
    "crates/noise-io",
    "crates/noise-auth",
    "crates/noise-mcp",
    "apps/noise-cli",
    "apps/noise-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Noise Software Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/wangjiann2026-collab/noise-software2"

[workspace.dependencies]
# ── Computation ──────────────────────────────────────────────────────────────
rayon        = "1.10"
nalgebra     = { version = "0.33", features = ["serde-serialize"] }
num_cpus     = "1.16"
approx       = "0.5"

# ── Async runtime ─────────────────────────────────────────────────────────────
tokio        = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
futures      = "0.3"

# ── Web / API ─────────────────────────────────────────────────────────────────
axum         = { version = "0.7", features = ["ws"] }
tower        = "0.5"
tower-http   = { version = "0.6", features = ["cors", "trace"] }
hyper        = { version = "1.4", features = ["full"] }

# ── Serialization ─────────────────────────────────────────────────────────────
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
bincode      = "1.3"
toml         = "0.8"

# ── Database ──────────────────────────────────────────────────────────────────
rusqlite     = { version = "0.32", features = ["bundled"] }

# ── Rendering ─────────────────────────────────────────────────────────────────
wgpu         = "22.0"
winit        = "0.30"
bytemuck     = { version = "1.18", features = ["derive"] }
image        = "0.25"
glam         = "0.29"

# ── CLI ───────────────────────────────────────────────────────────────────────
clap         = { version = "4.5", features = ["derive", "env"] }

# ── I/O & GIS ─────────────────────────────────────────────────────────────────
dxf          = "0.6"
geo          = "0.28"
geojson      = "0.24"
shapefile    = "0.6"
quick-xml    = "0.37"

# ── Auth ──────────────────────────────────────────────────────────────────────
argon2       = "0.5"
jsonwebtoken = "9.3"
uuid         = { version = "1.10", features = ["v4", "serde"] }
rand         = "0.8"

# ── Error handling ────────────────────────────────────────────────────────────
thiserror    = "2.0"
anyhow       = "1.0"

# ── Logging & Tracing ─────────────────────────────────────────────────────────
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Testing ───────────────────────────────────────────────────────────────────
criterion    = { version = "0.5", features = ["html_reports"] }

# ── Expression parsing (custom formula) ──────────────────────────────────────
evalexpr     = "12.0"

[profile.release]
opt-level    = 3
lto          = "thin"
codegen-units = 1
panic        = "abort"
strip        = true

[profile.bench]
opt-level    = 3
lto          = "thin"
