[package]
name        = "noise-api"
description = "REST API server (Axum) for the noise mapping platform"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "noise-api"
path = "src/main.rs"

[dependencies]
noise-core.path       = "../../crates/noise-core"
noise-data.path       = "../../crates/noise-data"
noise-auth.path       = "../../crates/noise-auth"
noise-mcp.path        = "../../crates/noise-mcp"
nalgebra.workspace    = true
rusqlite.workspace    = true
tokio.workspace       = true
axum.workspace        = true
tower.workspace       = true
tower-http.workspace  = true
serde.workspace       = true
serde_json.workspace  = true
tracing.workspace     = true
tracing-subscriber.workspace = true
thiserror.workspace   = true
anyhow.workspace      = true
uuid.workspace        = true
