[package]
name        = "noise-cli"
description = "Command-line interface for the noise mapping platform"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "noise"
path = "src/main.rs"

[dependencies]
noise-core.path      = "../../crates/noise-core"
noise-data.path      = "../../crates/noise-data"
noise-io.path        = "../../crates/noise-io"
noise-auth.path      = "../../crates/noise-auth"
noise-mcp.path       = "../../crates/noise-mcp"
uuid.workspace       = true
nalgebra.workspace   = true
clap.workspace       = true
tokio.workspace      = true
axum.workspace       = true
tower-http.workspace = true
serde.workspace      = true
serde_json.workspace = true
tracing.workspace    = true
tracing-subscriber.workspace = true
thiserror.workspace  = true
anyhow.workspace     = true
rayon.workspace      = true
num_cpus.workspace   = true
