[package]
name        = "noise-auth"
description = "Authentication and authorization: Argon2 password hashing, JWT tokens"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
argon2.workspace     = true
jsonwebtoken.workspace = true
uuid.workspace       = true
rand.workspace       = true
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
tracing.workspace    = true
