[package]
name        = "noise-core"
description = "Core acoustic simulation engine: ray tracing, angle scanning, propagation models"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[features]
# Enable wgpu-based GPU grid calculator.
gpu = ["dep:wgpu", "dep:bytemuck", "dep:futures"]

[dependencies]
rayon.workspace      = true
num_cpus.workspace   = true
nalgebra.workspace   = true
glam.workspace       = true
approx.workspace     = true
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
tracing.workspace    = true
evalexpr.workspace   = true

# GPU feature dependencies (optional).
wgpu     = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
futures  = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
approx.workspace    = true

[[bench]]
name    = "ray_tracer_bench"
harness = false

[[bench]]
name    = "propagation_bench"
harness = false

[[bench]]
name    = "grid_calc_bench"
harness = false
