[package]
name = "noise-desktop"
version = "0.1.0"
edition = "2021"
default-run = "noise-desktop"

[[bin]]
name = "noise-desktop"
path = "src/main.rs"

[lib]
name = "noise_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri           = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
anyhow          = "1"
uuid            = { version = "1.10", features = ["v4"] }
nalgebra        = { version = "0.33", features = ["serde-serialize"] }

noise-core      = { path = "../../../crates/noise-core" }
noise-data      = { path = "../../../crates/noise-data" }
noise-export    = { path = "../../../crates/noise-export" }
